<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_1_the_view_class_is_the_basic_building_block_for_all_ui_components"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="365dp"
        android:layout_height="146dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/don_t_know"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_don_t_know" />
    </RadioGroup>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="372dp"
        android:layout_height="42dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2_when_the_activity_is_no_longer_in_the_memory_it_is_said_to_be_in_the_state"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_running"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox_running"
        android:layout_width="114dp"
        android:layout_height="55dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="25dp"
        android:text="@string/running"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_destroyed"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onCheckboxClicked"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox_destroyed"
        android:layout_width="103dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:text="@string/destroyed"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_paused"
        app:layout_constraintStart_toEndOf="@+id/checkBox_running"
        android:onClick="onCheckboxClicked"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox_paused"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="25dp"
        android:text="@string/paused"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_destroyed"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:onClick="onCheckboxClicked"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="379dp"
        android:layout_height="68dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="1dp"
        android:text="@string/_3_choose_the_correct_kotlin_code_s_for_the_given_java_code_uri_uri_uri_parse_quot_http_www_google_com_quot_intent_it_new_intent_intent_action_view_uri"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_running" />

    <CheckBox
        android:id="@+id/checkBox_a"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/val_uri_uri_parse_quot_http_www_google_com_quot_val_it_intent_intent_action_view_uri"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onCheckboxClickedQuestion3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/checkBox_b"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="8dp"
        android:text="@string/val_uri_uri_uri_parse_quot_http_www_google_com_quot_val_it_intent_intent_intent_action_view_uri"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onCheckboxClickedQuestion3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_a" />

    <CheckBox
        android:id="@+id/checkBox_none"
        android:layout_width="372dp"
        android:layout_height="51dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="13dp"
        android:text="@string/none_of_the_above"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onCheckboxClickedQuestion3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_b" />


    <Button
        android:id="@+id/submit"
        android:layout_width="112dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_none" />

    <Button
        android:id="@+id/reset"
        android:layout_width="112dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        app:backgroundTint="#646868"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="resetButtonClick"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_none" />
</androidx.constraintlayout.widget.ConstraintLayout>